Fix search within pages alignment
Bug: T292107

--- a/resources/mobile.startup/search/SearchResultsView.less
+++ b/resources/mobile.startup/search/SearchResultsView.less
@@ -4,6 +4,11 @@
 	> div {
 		height: 100%;
 	}
+
+	.search-content {
+		display: flex;
+		align-items: center;
+	}
 }
 
 @media all and ( max-width: @width-breakpoint-tablet ) {
